# memory-setup

./: .gitignore  CLAUDE.md  PROJECT-BIBLE-DIAGRAM-VISUAL.md  PROJECT-BIBLE-DIAGRAM.md  README.md  SETUP-GUIDE.md  claude-md-example.md
bible-template-v4/: README.md  bible.md  cold-start.md  glossary.md  roadmap.md  runbook.example.md  runbook.md
bible-template-v4/assignments/: README.md
bible-template-v4/assignments/open/: _example.md
bible-template-v4/conversations/: README.md
bible-template-v4/decisions/: README.md  _example.md
bible-template-v4/references/: README.md
biblion/: README.md  biblion.config.json  db.js  package.json  renderer.js  scanner.js  server.js
biblion/docs/bible/: bible.md  cold-start.md  glossary.md  roadmap.md  runbook.md
biblion/views/: browse.js  dashboard.js  layout.js  page.js  search.js
genesis-coin/: Cargo.toml  README.md
genesis-coin/src/: lib.rs  main.rs
memory-template/: MEMORY.md
memory-template/_templates/: EXAMPLE-feedback-no-guessing.md  feedback.md  project.md  reference.md  user.md
memory-template/warm/: feedback.md  projects.md  protocols.md  references.md  sessions.md
thread-bible-template/: bible.md
