[package]
name = "genesis-coin"
version = "0.1.0"
edition = "2021"
description = "A simple action economy — wallets, ledger, configurable action costs"
license = "MIT"
repository = "https://github.com/firstplacebrian/genesis-coin"

[[bin]]
name = "genesis-coin"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
